assets/queries/k8s/ingress_without_tls/test/negative1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: negative-ingress
spec:
  tls:
  - hosts:
    - example.com
    secretName: example-tls
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
