assets/queries/k8s/ingress_without_tls/test/positive_expected_result.json
[
  {
    "queryName": "Beta - Ingress Without TLS",
    "severity": "HIGH",
    "line": 5,
    "fileName": "positive1.yaml"
  }
]
